2008-02-26 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	0001835: cli crashes for all reports. NoneType has no attribute 
	get_gramps_id

2008-02-26 Benny Malengier <benny.malengier@gramps-project.org>
    * src/ScratchPad.py: bug when dragging sourceref #1833
    * src/GrampsDisplay.py: remove whitespace

2008-02-26 Peter Landgren <peter.talken@telia.com>
    * src/plugins/FanChart.py: Fix for printing in landscape issue #1753

2008-02-25 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py:
	* src/ArgHandler.py:
	* src/ReportBase/_CommandLineReport.py:
	Improvements to CLI reports - 
	0001824: Bug in command line - gramps does not show right error.
	0001821: A command "python src/gramps.py --open=DG1 --action=report" cause 
	a crash
	Fix help strings.

2008-02-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DateHandler/_DateParser.py: set year += 1
	* src/gen/lib/date.py: removed slash-date fix
	* src/gen/lib/test/date_test.py: slash dates sort correctly

2008-02-25  Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>
	* src/const.py.in: query os.environ for GRAMPSHOME env and use it
	0001831: A patch allowing using a different home folder than default 

2008-02-25 Frederik De Richter <frederik.de.richter@pandora.be>
	* src/GrampsLogger/_ErrorView.py
	links to wiki manual 

2008-02-25  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ReportBase/_ArgHandler.py (ArgHandler.cl_action): improve output
	when no report or tool name is given. Remove call to sys.exit(1) as it 
	means that gui error report handler is called (locks db).
	addresses part of #0001821

2008-02-25 Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>
	* src/ReportBase/_CommandLineReport.py: add user friendly output to cli 
	gramps.py -u --open=merge --action=report -p "name=indiv_complete,show=all"
	#0001823

2008-02-25 Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>